# scenescape

./: .gitignore  Makefile  README.md  REUSE.toml  common.mk  exclude_for_release.txt  sources.Dockerfile  third-party-programs.txt  version.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: testing.md
.github/prompts/: reason.prompt.md  reflect.prompt.md
.github/resources/: .prettierignore  coverity-requirements.txt  requirements.txt
.github/skills/: documentation-how.md  javascript.md  makefile.md  python.md  security.md  shell.md  test-verification-gate.md  testing.md
.github/workflows/: auto-update-labeled.yml  clamav.yml  codeql.yml  coverity.yml  docs-reusable-workflow.yaml  documentation-check.yaml  gitleaks.yml  renovate-config-validator.yml  renovate.yml  scorecard.yml  tests-all.yml  tests-bat.yml  tracker-service.yaml  trivy.yml  update-dlstreamer.yml  weekly-build.yml  weekly-tests.yml  zizmor.yml
LICENSES/: BSD-3-Clause.txt
autocalibration/: Agents.md  Dockerfile  Makefile  README.md  requirements-runtime.txt
autocalibration/docs/: README.md
autocalibration/tools/: ondemand_model_loader.py
cluster_analytics/: Agents.md  Dockerfile  Makefile  README.md  requirements-build.txt  requirements-runtime.txt
cluster_analytics/docs/: README.md
controller/: Agents.md  Dockerfile  Makefile  README.md  requirements-runtime.txt
controller/config/: reid-config.json
controller/docs/: README.md
controller/src/: controller-cmd
controller/src/robot_vision/: CMakeLists.txt  pyproject.toml
controller/src/robot_vision/src/rv/tracking/: ObjectMatching.cpp  TrackManager.cpp
controller/tests/: conftest.py  tc_scene_import_json.py
dlstreamer-pipeline-server/: README.md  perf-config.json  queuing-config-gpu.json  queuing-config-no-ntp.json  queuing-config-no-rtsp.json  queuing-config-npu.json  queuing-config-reid-semantic.json  queuing-config-reid.json  queuing-config.json  retail-config-gpu.json  retail-config-no-ntp.json  retail-config-no-rtsp.json  retail-config-npu.json  retail-config-reid.json  retail-config.json
dlstreamer-pipeline-server/user_scripts/: DeepScenario.py
docs/adr/: 0008-tracker-service-horizontal-scaling.md  0010-reid-metadata-storage-architecture.md
docs/design/: streaming-video-webrtc-ui.md  tracker-evaluation-pipeline.md  tracker-service.md  vision-pipeline-overview.md
docs/development/: vscode-setup.md
docs/user-guide/: api-reference.md  get-started.md  how-to-deploy-scenescape-using-prebuilt-containers.md  how-to-guides.md  how-to-integrate-cameras-and-sensors.md  how-to-use-3D-UI.md  index.md  release-notes.md  troubleshooting.md  tutorial.md  working-with-spatial-analytics-data.md
kubernetes/: Makefile
kubernetes/scenescape-chart/: Chart.yaml  values.yaml
manager/: Agents.md  Dockerfile  MIGRATIONS.md  Makefile  requirements-runtime.txt
manager/config/: scenescape-init
manager/src/: manage.py
manager/tests/: conftest.py  pytest.ini  tc_add_delete_3d_object_api.py  tc_api_large_strings.py  tc_calibrate_all_sensor_types_api.py  tc_different_formats_maps_api.py  tc_manual_camera_calibration_api.py  tc_object_crud_api.py  tc_persistence_on_page_navigate_api.py  tc_persistence_on_restart_api.py  tc_scene_import_api.py  tc_sensor_area_api.py  tc_sensor_location_api.py  tc_sensor_scene_api.py  tc_superuser_crud_operations_api.py  tc_upload_3d_glb_file_api.py  (+1 more)
mapping/: Agents.md  Dockerfile  Makefile  README.md  requirements_api.txt  requirements_mapanything.txt  requirements_vggt.txt
model_installer/: Dockerfile  Makefile
sample_data/: docker-compose-dl-streamer-example.yml  docker-compose-dls-perf.yml
scene_common/: Dockerfile  requirements.txt
tests/: Makefile  Makefile.functional  Makefile.sscape  Makefile.user_interface  README.md  conftest.py  runtest
tools/: scenescape-start  yaml_parse.sh
tracker/: Agents.md  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
tracker/config/: tracker.json
tracker/docs/: How-to-guide.md  implementation.md
tracker/inc/: config_loader.hpp  coordinate_transformer.hpp  env_vars.hpp  id_map.hpp  manager_rest_client.hpp  message_handler.hpp  metrics.hpp  observability_context.hpp  scene_loader.hpp  scene_parser.hpp  scene_registry.hpp  scenes_config.hpp  telemetry.hpp  time_chunk_buffer.hpp  time_chunk_scheduler.hpp  time_utils.hpp  track_publisher.hpp  tracking_types.hpp  tracking_worker.hpp  uuid.hpp
tracker/schema/: config.schema.json  scene-data.schema.json
tracker/src/: api_scene_loader.cpp  config_loader.cpp  coordinate_transformer.cpp  logger.cpp  main.cpp  manager_rest_client.cpp  message_handler.cpp  metrics.cpp  mqtt_client.cpp  observability_context.cpp  proxy_utils.cpp  scene_loader.cpp  scene_registry.cpp  telemetry.cpp  time_chunk_buffer.cpp  time_chunk_scheduler.cpp  time_utils.cpp  track_publisher.cpp  tracking_worker.cpp
tracker/test/load/: Dockerfile.k6  Makefile  README.md  compose.yml  conftest.py  requirements.txt  simulate-detections.js  test_load.py
tracker/test/load/config/: mosquitto.conf  otel-collector.yaml  scenes.json
tracker/test/service/: conftest.py  docker-compose.yaml  otel-collector-config.yaml  test_mqtt.py  test_scene_loading.py  test_scene_update.py  test_telemetry.py
tracker/test/service/fixtures/: test-auth.json  test-scenes-api.json
tracker/test/service/mocks/: mock_manager.py
tracker/test/service/utils/: schema.py
tracker/test/tools/: generate_reference_data.py  transformation_reference.json
tracker/test/unit/: CMakeLists.txt  api_scene_loader_test.cpp  config_loader_test.cpp  coordinate_transformer_test.cpp  id_map_test.cpp  manager_rest_client_test.cpp  message_handler_test.cpp  metrics_test.cpp  proxy_utils_test.cpp  telemetry_test.cpp  time_chunk_buffer_test.cpp  time_chunk_scheduler_test.cpp  time_utils_test.cpp  track_publisher_test.cpp  tracking_worker_test.cpp  uuid_test.cpp
tracker/test/unit/utils/: mock_manager_rest_client.hpp  mock_mqtt_client.hpp
(+393 files in other folders)
